--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,36 +1,3 @@
 {
-  "env": {
-    "browser": true,
-    "es2021": true
-  },
-  "extends": [
-    "airbnb",
-    "eslint:recommended",
-    "plugin:react/recommended",
-    "plugin:react/recommended",
-    "plugin:react/jsx-runtime"
-  ],
-  "parserOptions": {
-    "ecmaFeatures": {
-      "jsx": true
-    },
-    "ecmaVersion": 12,
-    "sourceType": "module"
-  },
-  "plugins": ["react"],
-  "rules": {
-    "react/function-component-definition": [
-      2,
-      {
-        "namedComponents": "arrow-function",
-        "unnamedComponents": "arrow-function"
-      }
-    ],
-    "no-console": 0,
-    "linebreak-style": 0,
-    "import/no-named-as-default": 0,
-    "import/no-named-as-default-member": 0,
-    "jsx-a11y/label-has-associated-control": 0,
-    "object-curly-newline": "off"
-  }
+  "extends": "next/core-web-vitals"
 }
