--- a/.github/workflows/push-docker-image.yml
+++ b/.github/workflows/push-docker-image.yml
@@ -58,7 +58,7 @@ jobs:
         with:
           context: "{{defaultContext}}:./"
           push: ${{ github.event_name != 'pull_request' }} # Don't push on PR
-          tags: ${{ steps.meta.outputs.tags }}
+          tags: latest
           labels: ${{ steps.meta.outputs.labels }}
           cache-from: type=gha
           cache-to: type=gha,mode=max
