--- a/package.json
+++ b/package.json
@@ -9,26 +9,21 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@emotion/react": "^11.11.4",
-    "@emotion/styled": "^11.11.5",
-    "@mui/icons-material": "^5.15.14",
-    "@mui/material": "^5.15.14",
-    "@reduxjs/toolkit": "^2.2.3",
+    "@tanstack/react-query": "^5.59.0",
     "axios": "^1.6.8",
-    "formik": "^2.4.5",
-    "next": "14.1.4",
-    "react": "^18",
-    "react-dom": "^18",
-    "yup": "^1.4.0"
+    "next": "15.1.0",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "sharp": "^0.33.5"
   },
   "devDependencies": {
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "@typescript-eslint/eslint-plugin": "^7.5.0",
+    "@types/node": "^22.10.2",
+    "@types/react": "^19.0.1",
+    "@types/react-dom": "^19.0.2",
+    "@typescript-eslint/eslint-plugin": "^8.18.0",
     "autoprefixer": "^10.4.19",
-    "eslint": "^8.57.0",
-    "eslint-config-next": "14.1.4",
+    "eslint": "^9.17.0",
+    "eslint-config-next": "15.1.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-jsx-a11y": "^6.8.0",
     "eslint-plugin-prettier": "^5.1.3",
@@ -37,10 +32,11 @@
     "eslint-plugin-simple-import-sort": "^12.0.0",
     "postcss": "^8",
     "postcss-import": "^16.1.0",
-    "postcss-nesting": "^12.1.1",
+    "postcss-nesting": "^13.0.1",
     "prettier": "^3.2.5",
-    "prettier-plugin-tailwindcss": "^0.5.13",
+    "prettier-plugin-tailwindcss": "^0.6.9",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
-  }
+  },
+  "packageManager": "yarn@4.5.3"
 }
